// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withContainer class components renders ifNull 1`] = `
<_class>
  <div
    id="notRendered"
  />
</_class>
`;

exports[`withContainer class components renders ifRender 1`] = `
<_class
  testProp="jack"
>
  <div
    id="rendered"
  >
    <div />
  </div>
</_class>
`;

exports[`withContainer class components renders nothing 1`] = `<_class />`;

exports[`withContainer class components renders nothing 2 1`] = `<_class />`;

exports[`withContainer functional components renders ifNull 1`] = `
<bound >
  <div
    id="notRendered"
  />
</bound >
`;

exports[`withContainer functional components renders ifRender 1`] = `
<bound 
  testProp="jack"
>
  <div
    id="rendered"
  >
    <div />
  </div>
</bound >
`;

exports[`withContainer functional components renders nothing 1`] = `<bound  />`;

exports[`withContainer functional components renders nothing 2 1`] = `<bound  />`;
